Issue: Search bar not showing without user login, Resolved!

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif, 'Google Sans';
 }
 
 .hide-scrollbar::-webkit-scrollbar {
